@@ -138,6 +138,9 @@ flat_sun_max = -5
 ; Default camera name. Used by rts2-target when camera name is not specified.
 ; default_camera = NULL
 
+; The file contains : separated login names and passwords. Default is RTS2_PREFIX/etc/rts2/logins.
+; logins = "/etc/rts2/logins"
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; This section describes behaviour of rts2-centrald component. Please see
 ; man rts2-centrald for details.
@@ -428,9 +431,6 @@ auth_localhost = true
 ; with database support or without it. This value will have effect only if RTS2 was build without
 ; database.
 ;
-; The file contains : separated login names and passwords. Default is RTS2_PREFIX/etc/rts2/logins.
-; logins = "/etc/rts2/logins"
-
 ; Path for images crated by xmlrpcd. Can contains expansion characters. Default to /tmp.
 images_path = "/images/xmlrpcd/%N"
 
