@@ -7,7 +7,7 @@ EXTRA_DIST = conngrb.ec connshooter.ec
 CLEANFILES = conngrb.cpp connshooter.cpp
 
 rts2_grbforward_SOURCES = forward.cpp rts2grbfw.cpp
-rts2_grbforward_LDADD = -L../../lib/rts2 -lrts2 @LIB_M@ @LIB_NOVA@
+rts2_grbforward_LDADD = -L../../lib/rts2 -lrts2 @LIB_M@ @LIB_CRYPT@ @LIB_NOVA@
 rts2_grbforward_CXXFLAGS = @NOVA_CFLAGS@
 
 if PGSQL
