@@ -6,7 +6,7 @@ EXTRA_DIST = rts2loggerbase.cpp
 
 AM_CXXFLAGS=@NOVA_CFLAGS@
 
-LDADD = rts2loggerbase.o -L../../lib/rts2 -lrts2 @LIB_NOVA@ @LIB_M@
+LDADD = rts2loggerbase.o -L../../lib/rts2 -lrts2 @LIB_CRYPT@ @LIB_NOVA@ @LIB_M@
 
 rts2_logger_SOURCES = logger.cpp
 
